rock_paper_scissors/style.css
body {
  background-image: url(background.jpg);
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  text-align: center;
}

* {
  font-size: 40px;
  color: white;  
  font-family: "Cherry Bomb One", system-ui;
  font-weight: 0;
  letter-spacing: 4px;
}

img1 {

}

.style1 {
  border-color: none;
  border-radius: 34px;
  border-style: none;
  box-shadow: black 10px 10px 10px;
  margin: 20px;
}

button {
  transition: 0.2s;
  cursor: pointer;
}


button:hover {
  transform: scale(1.1);
}

.main {
  transition: 0.3s;
}

.main:hover {
  letter-spacing: 6px;
  color: rgba(255, 255, 255, 0.507);  
}

.main2 {
  margin: 100px;
  transition: 0.3s;
}

.main2:hover {
  letter-spacing: 6px;
  color: rgba(255, 255, 255, 0.507);  
}

.img2 {
  width: 400px;
  height: 280px;
  border-radius: 45px;
  border: none;
  margin-left: 90px;
  margin-right: 120px;
  margin-top: 10px;
  transition: 0.2s;
  box-shadow: black 10px 10px 10px;
}

.img2:hover {
  transform: scale(1.05);
}

#result {
  transition: 0.5s;
}

#result:hover {
  letter-spacing: 6px;
  color: rgba(255, 255, 255, 0.507);  
}

